# fresnel

./: .ghci.repl  .hlint.yaml  LICENSE  README.md  cabal.project  cabal.project.ci  fresnel.cabal  hie.yaml
.github/workflows/: ci.yml
docs/: index.html  optics.css  optics.js
fresnel/: CHANGELOG.md  fresnel.cabal
fresnel-diagram/: fresnel-diagram.cabal
fresnel-diagram/src/: Main.hs
fresnel-fused-effects/: CHANGELOG.md  README.md  fresnel-fused-effects.cabal
fresnel-fused-effects/src/Fresnel/: Effect.hs
fresnel/Optional/: Internal.hs
fresnel/src/Fresnel/: AffineFold.hs  At.hs  Either.hs  Fold.hs  Fold1.hs  Getter.hs  Iso.hs  Ixed.hs  Lens.hs  List.hs  Maybe.hs  Optional.hs  OptionalFold.hs  Prism.hs  RelevantFold.hs  Review.hs  Set.hs  Setter.hs  Traversal.hs  Traversal1.hs  Tuple.hs
fresnel/src/Fresnel/Fold1/: Internal.hs
fresnel/src/Fresnel/Functor/: Ap1.hs  Backwards.hs  Traversed.hs  Traversed1.hs
fresnel/src/Fresnel/Getter/: Internal.hs
fresnel/src/Fresnel/Iso/: Internal.hs
fresnel/src/Fresnel/Lens/: Internal.hs
fresnel/src/Fresnel/List/: NonEmpty.hs
fresnel/src/Fresnel/Monoid/: Cons.hs  Fork.hs  Snoc.hs
fresnel/src/Fresnel/OptionalFold/: Internal.hs
fresnel/src/Fresnel/Prism/: Internal.hs
fresnel/src/Fresnel/Profunctor/: AffineStar.hs  Coexp.hs  Optical.hs  OptionalStar.hs  Recall.hs  Star1.hs  Traversing1.hs
fresnel/src/Fresnel/Semigroup/: Cons1.hs  Fork1.hs  Snoc1.hs
fresnel/src/Fresnel/Traversal/: Internal.hs
fresnel/src/Fresnel/Traversal1/: Internal.hs
fresnel/test/: Test.hs
fresnel/test/Fold/: Test.hs
fresnel/test/Fresnel/: Tropical.hs
fresnel/test/Getter/: Test.hs
fresnel/test/Iso/: Test.hs
fresnel/test/Monoid/Fork/: Test.hs
fresnel/test/Profunctor/Coexp/: Test.hs
fresnel/test/Review/: Test.hs
fresnel/test/Test/: Group.hs  Options.hs  Print.hs  Run.hs
fresnel/test/Traversal/: Test.hs
fresnel/test/Tropical/: Test.hs
script/: ghci-flags  ghci-flags-dependencies
src/Fresnel/: AffineFold.hs  AffineTraversal.hs  At.hs  Fold.hs  Getter.hs  Iso.hs  Ixed.hs  Lens.hs  Optic.hs  Optional.hs  Prism.hs  Review.hs  Setter.hs  Traversal.hs
src/Fresnel/Bifunctor/: Contravariant.hs
src/Fresnel/List/: NonEmpty.hs
src/Fresnel/Profunctor/: AffineStar.hs  Coexp.hs  Getting.hs  Iso.hs  Isoing.hs  Lensing.hs  Market.hs  Optical.hs  Recall.hs  Reviewing.hs
test/: Test.hs
test/Fresnel/Profunctor/Coexp/: Test.hs
test/Getter/: Test.hs
test/Iso/: Test.hs
test/Profunctor/Coexp/: Test.hs
