cabal-version:      2.4
name:               fresnel
version:            0.0.0.0
synopsis:           high-powered optics in a small package
description:        fresnel offers (non-indexed) profunctor optics composed with the lowly . operator.
homepage:           https://github.com/robrix/fresnel
bug-reports:        https://github.com/robrix/fresnel/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rob Rix
maintainer:         rob.rix@me.com

copyright:          2021 Rob Rix
category:           Control
extra-source-files: CHANGELOG.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

library
  import: common
  exposed-modules:
    Fresnel.Fold
    Fresnel.Getter
    Fresnel.Iso
    Fresnel.Lens
    Fresnel.Optic
    Fresnel.Prism
    Fresnel.Profunctor.Coexp
    Fresnel.Profunctor.Recall
    Fresnel.Review
    Fresnel.Setter
    Fresnel.Traversal
  build-depends:
    , base ^>=4.14
    , profunctors ^>= 5.6
    , transformers >= 0.5.6 && < 0.7
  hs-source-dirs:   src

test-suite test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  other-modules:
    Getter.Test
    Iso.Test
    Profunctor.Coexp.Test
  build-depends:
    , base
    , fresnel
    , QuickCheck ^>= 2.14
