cabal-version:      2.4
name:               fresnel-diagram
version:            0.0.0.0
synopsis:           Diagram fresnel’s optics/typeclass hierarchy.
description:        Diagram fresnel’s optics/typeclass hierarchy as SVG.
homepage:           https://github.com/fresnel/fresnel
bug-reports:        https://github.com/fresnel/fresnel/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rob Rix
maintainer:         rob.rix@me.com

copyright:          2021 Rob Rix
category:           Graphics

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures
  if (impl(ghc >= 9.10))
    ghc-options:
      -Wno-missing-role-annotations
      -Wno-term-variable-capture

executable fresnel-diagram
  import: common
  main-is: Main.hs
  build-depends:
    , base >=4.14 && < 5
    , blaze-svg
    , containers
  hs-source-dirs: src

source-repository head
  type:     git
  location: https://github.com/fresnel/fresnel
  subdir:   fresnel-diagram
