cabal-version:      2.4
name:               fresnel-fused-effects
version:            0.0.0.0
synopsis:           fresnel/fused-effects integration
description:        A handful of operators bridging `fresnel` optics to `fused-effects` effects.
homepage:           https://github.com/fresnel/fresnel
bug-reports:        https://github.com/fresnel/fresnel/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rob Rix
maintainer:         rob.rix@me.com

copyright:          2022 Rob Rix
category:           Control
extra-source-files:
  CHANGELOG.md
  README.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: common
  exposed-modules:
    Fresnel.Effect

  build-depends:
    , base           >= 4.14 && < 5
    , fresnel       ^>= 0
    , fused-effects ^>= 1.1
  hs-source-dirs:   src
  default-language: Haskell2010
